2001-06-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* TODO: Added Chris Hostetter's suggestions on creating webpages.

2001-06-28  Elliot Glaysher  <nuriko.chan@home.com>

	* Updates by Shawn Oakey (Even more! Wow!):
	* lib/unitedmedia: Various fixes
	* lib/mrlowe: Now it's own module!
	* lib/keenspace: Now adds two more comics, and has lot's of nice
	updates
	* lib/penny-arcade: Updated.
	* REMOVED: lib/forbez: Now in Keenspace!

2001-06-28  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics (pod): Fixed documentation on the -s option to match
	the change in behavior that was made way back in version 0.9 (bug
	#436946).

2001-06-27  Elliot Glaysher  <nuriko.chan@home.com>

	* lib/foxtrot: Removed. It's been in lib/ucomics for awhile now. 
	* Makefile: Updated for all of Oakey's deletions.
	
	* Updates by Shawn Oakey:
	* lib/ucomics (PSMueller): moved psmueller into ucomics.
	(Tank McNamara): updated. (The Big Picture): Updated
	(Tom the Dancing Bug): Added
	* lib/dragon: added (pulled from bigpanda)
	* lib/comicspage: Pulled Herb and Jamal
	* lib/comicspage_ed (billed): Removed. Added: paulc jeffd mattd 
	davidh taylorj dickl dougm dwanep drews annt danw dickw.
	* lib/mercury (Phantom): Dumped in lib/kingfeatures
	(Pretzel Logic): Only d/l on TThSa.
	(Newbreed): Removed. No alernates found.
	(Fair Game): moved into lib/fairgame
	* lib/bad_boys: minor fix
	* lib/comiczone (Robotman): changed to Monty
	(Jane's World): moved in from lib/janesworld
	* lib/falling_dream: updates
	* lib/mom: added list of missing comics.
	* lib/sluggy_freelance: changed archives format
	* lib/fika: no longer, updated.
	* lib/gaming_u: minor changes, no longer updated.
	* lib/lily_wong: changed location
	* lib/madam-n-eve: lots of changes
	* lib/sempai: No longer updated, set back 2 years.
	* lib/down_earth: lots of changes
	* lib/kingfeatures (mandrake ss henry hazel moosem pops trudy): Stopped
	on June 16. (Moose Miller): Now Moose and Molly (Phantom): Put in here,