@@ -1,12 +1,15 @@
 2001-06-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* Makefile (MODULES): Removed the modules that were missed with
+	Shawn's mass update on 2001-06-27
+	(OLDMODULES): Added forbez.
 	* TODO: Added Chris Hostetter's suggestions on creating webpages.
 
 2001-06-28  Elliot Glaysher  <nuriko.chan@home.com>
 
 	* Updates by Shawn Oakey (Even more! Wow!):
 	* lib/unitedmedia: Various fixes
-	* lib/mrlowe: Now it's own module!
+	* lib/mrlowe: Now its own module!
 	* lib/keenspace: Now adds two more comics, and has lot's of nice
 	updates
 	* lib/penny-arcade: Updated.
